refactor: Improve code quality, consistency, and maintainability
- Standardized all mappers (`GameMapper`, `UserMapper`, `UserGameMapper`) to use MapStruct, replacing manual implementations for better consistency and reduced boilerplate.
  - Added a custom mapping method in `UserGameMapper` to handle `LocalDateTime` to `OffsetDateTime` conversion, resolving a compilation error.
- Enhanced exception handling in `UserService`:
  - Replaced generic `RuntimeException` with a specific `EmailAlreadyExistsException`.
  - Implemented a `GlobalExceptionHandler` to provide proper API error responses (409 Conflict).
  - Adopted the unnamed variable pattern (`_`) for unused lambda and catch block parameters.
- Refactored `IgdbApiAdapter` for improved readability and maintainability:
  - Extracted duplicate string literals into static constants.
  - Created helper methods (`createHeaders`, `processGamesAsync`) to reduce code duplication and improve clarity.
  - Addressed "Null pointers should not be dereferenced" warnings by safely handling `response.getBody()`.
- Modernized `JwtAuthenticationFilter`:
  - Migrated from field injection (`@Autowired`) to constructor injection for better testability and explicit dependency declaration.
  - Removed shadowing of the parent class's `logger` field.
- Updated `SecurityConfig` to reflect the changes in `JwtAuthenticationFilter`'s constructor-based dependency injection.